--- a/templates/create_rec.html
+++ b/templates/create_rec.html
@@ -8,9 +8,9 @@
     </b><br>
     Please enter what you would like to call your review: <textarea name=rec_name rows='1' cols='80'></textarea><br><br>
 
-    <b>CITY:</b><br>
-    Please enter the city you will review: <textarea name=city_name rows='1' cols='80'></textarea><br>
-    Add an explanation on what you loved about the city: <textarea class='form-control' rows='3' name=city_info cols='80'></textarea><br><br>
+    <b>DESTINATION:</b><br>
+    Please enter the destination you're going to review: <textarea name=city_name rows='1' cols='80'></textarea><br>
+    Add an explanation about the destination: <textarea class='form-control' rows='3' name=city_info cols='80'></textarea><br><br>
 
     <b>STAY:</b><br>
     Where did you stay: <textarea name=stay_name rows='1' cols='80'></textarea><br>
@@ -24,7 +24,7 @@
     What activities do you recommend doing/avoiding: <textarea name=do_name rows='1' cols='80'></textarea><br>
     Why do/don't do those activities: <textarea name=do_info class='form-control' rows='3' cols='80'></textarea><br><br>
 
-    <div><b>Upload images for your city recommendation!</b><br><p>
+    <div><b>Upload images for your recommendation!</b><br><p>
     <input type=file name=file>
     <input type=file name=file2>
     <input type=file name=file3>
