--- a/templates/recommendation_edit.html
+++ b/templates/recommendation_edit.html
@@ -8,9 +8,9 @@
     <b>TITLE:</b><br>
     Please edit what you would like to call your review: <textarea name=rec_name rows='1' cols='80'>{{ recommendation.rec_name }}</textarea><br><br>
 
-    <b>CITY:</b><br>
-    Please enter the city you will review: {{ recommendation.city.city_name }} <br>
-    Add an explanation on what you loved about the city: <textarea name=city_info rows='3' cols='80'>{{ recommendation.city.city_info }}</textarea><br><br>
+    <b>DESTINATION:</b><br>
+    Please enter the destination you will review: {{ recommendation.city.city_name }} <br>
+    Add an explanation for the destination: <textarea name=city_info rows='3' cols='80'>{{ recommendation.city.city_info }}</textarea><br><br>
 
     <b>STAY:</b><br>
     Where did you stay: <textarea name=stay_name rows='1' cols='80'>{{ recommendation.stay_name }}</textarea><br>
