--- a/templates/recommendation_view.html
+++ b/templates/recommendation_view.html
@@ -36,7 +36,7 @@
 
 
 <h2>{{recommendation.rec_name | title}}</h2>
-<div class="center_text">created by {{ recommendation.user.username }}<br><br></div>
+<div class="center_text">created by {{ recommendation.user.username | title}}<br><br></div>
 
 <h3>{{recommendation.city.city_name | title}}</h3>
 
