--- a/templates/username_search.html
+++ b/templates/username_search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>Recommendations created by {{ username }}</h1>
+  <h1>Recommendations created by {{ username | title}}</h1>
 
 
   <ul class="user-recs">    
