--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -37,7 +37,7 @@
 
 <div class="search">
   <br><form action='/search_city'>
-Search for recommendations by city! <input type='text' name=city_name>
+Search for recommendations by destination! <input type='text' name=city_name>
   <input type='submit'>
   </form>
 </div>
