--- a/templates/recommendation_edit.html
+++ b/templates/recommendation_edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h2>Edit your recommendation below</h2>
+<h2>Edit your recommendation below:</h2>
 <div class="edit-form">
 <form action='/recommendations/{{ recommendation.rec_id }}' method="POST">
    
